--- a/tex/metodos.tex
+++ b/tex/metodos.tex
@@ -4,6 +4,7 @@
 \chapter{Materiais e Métodos} \label{ch:MM} %Uma label é como você referencia uma seção no texto com a tag \ref{}
 
 \textcolor{red}{Design do método! (Marconi, Gil, Cervo) c/ diagrama}
+\textcolor{red}{Tecnologia utilizada e mais... (verifique correção de jorge)}
 
 Dentre os dez artigos estudados, o atributo SST foi determinado em apenas três deles. O melhor resultado foi obtido para um modelo simplificado de regressão linear, em que as mangas foram divididas em três classes de acordo com o nível de SST, enquanto que para os demais modelos os resultados foram medianos ou ruins ao empregar no máximo três variáveis de entrada. Assim, nota-se uma carência de um modelo robusto e generalista para predição de SST. Desta forma, o estudo será conduzido de forma a investigar quais atributos visuais da manga mais se relacionam a esse atributo de qualidade, para que um bom modelo preditivo seja obtido.
 
@@ -27,59 +28,69 @@ As imagens das mangas serão obtidas para cada lado da fruta, que serão colocad
 
 \section{Obtenção dos valores de referência}
 
-Os valores reais de SST serão obtidos segundo o procedimento do Instituto Adolfo Lutz (2008), sendo também adotado por Yahaya et al. (2015). Nele, as mangas têm inicialmente sua polpa homogeneizada e filtrada por uma centrífuga. O suco extraído é colocado em um refratômetro digital (HI 96804, Hanna Instruments, USA) para a quantificação de SST em ºBrix. 
+Os valores reais de SST serão obtidos segundo o procedimento do Instituto Adolfo Lutz (2008), sendo também adotado por Yahaya et al. (2015). Nele, as mangas têm inicialmente sua polpa homogeneizada e filtrada por uma centrífuga. O suco extraído é colocado em um refratômetro digital (HI 96804, Hanna Instruments, USA) para a quantificação de SST em ºBrix.
+
+\section{Pré-processamento das imagens}
+
+Foram testadas diferentes configurações das técnicas de pré-processamento, visando a menor quantidade de ruído possível nas imagens. Apesar de as fotos terem sido tiradas em um ambiente controlado, as imagens resultantes variaram quanto ao ruído nelas contido, devido ao acúmulo de sujeira na câmara com o passar das semanas do experimento. Sendo assim, as configurações das técnicas variaram de acordo com as imagens.
+
+A primeira técnica utilizada foi o filtro da mediana, de forma que as pequenas manchas contidas nas imagens fossem removidas. O tamanho de janela que garantiu uma melhor remoção de ruído na maioria das imagens foi de 11x11 pixels. A figura \ref{img:pre_med} mostra o efeito da utilização do filtro da mediana em uma imagem ruidosa.
+
+Como pode-se notar pela figura \ref{img:pre_med}, pequenos pontos permaneceram após a filtragem. Eles poderiam ser removidos com um tamanho de janela maior, mas isto implicaria também em uma perda de detalhes da manga. Assim, foi utilizada a operação de abertura, que utiliza a morfologia para remover pequenos pontos da imagem (Figura \ref{img:pre_ope}).
+
+Após uniformizar a cor do fundo das imagens, foi possível realizar a segmentação pelo algoritmo de Otsu, de forma que as mangas fossem isoladas (Figura \ref{img:pre_otsu}). Entretanto, o algoritmo não foi capaz de remover as sombras contidas na imagem. Assim, utilizou-se a limiarização simples, visto que a intensidade das sombras era, em geral, visivelmente menor que a intensidade das mangas. 
 
 \section{Construção dos modelos}
 
-\subsection{\textcolor{red}{Regressão Linear (Colocar na fundamentação?)}}
+% \subsection{\textcolor{red}{Regressão Linear (Colocar na fundamentação?)}}
 
-A regressão linear consiste em uma técnica estatística utilizada para prever uma variável quantitativa com base em uma única variável de entrada. Ela é empregada quando o relacionamento entre $x$ e $y$ é presumidamente linear (JAMES et al., 2013), como mostra a Equação \ref{eq:rl1}:
+% A regressão linear consiste em uma técnica estatística utilizada para prever uma variável quantitativa com base em uma única variável de entrada. Ela é empregada quando o relacionamento entre $x$ e $y$ é presumidamente linear (JAMES et al., 2013), como mostra a Equação \ref{eq:rl1}:
 
-\begin{equation} \label{eq:rl1}
-	Y = \beta_0 + \beta_1X + \epsilon
-\end{equation}
+% \begin{equation} \label{eq:rl1}
+% 	Y = \beta_0 + \beta_1X + \epsilon
+% \end{equation}
 
-Em que $Y$ é o vetor de variável de saída, $X$ é o vetor de variável de entrada, $\beta_0$ e $\beta_1$ são o intercepto e inclinação da reta respectivamente e $\epsilon$ é o erro aleatório.
+% Em que $Y$ é o vetor de variável de saída, $X$ é o vetor de variável de entrada, $\beta_0$ e $\beta_1$ são o intercepto e inclinação da reta respectivamente e $\epsilon$ é o erro aleatório.
 
-Para que a estimação da variável de saída seja realizada, os parâmetros $\beta_0$ e $\beta_1$ devem inicialmente ser estimados, o que é feito normalmente pelo método de mínimos quadrados. Neste critério, busca-se minimizar a soma do quadrado dos resíduos (RSS – \textit{Residual Sum of Squares}), dada pela equação abaixo:
+% Para que a estimação da variável de saída seja realizada, os parâmetros $\beta_0$ e $\beta_1$ devem inicialmente ser estimados, o que é feito normalmente pelo método de mínimos quadrados. Neste critério, busca-se minimizar a soma do quadrado dos resíduos (RSS – \textit{Residual Sum of Squares}), dada pela equação abaixo:
 
-\begin{equation} \label{eq:rss}
-	RSS = e_1^2 + e_2^2 + ... + e_n^2
-\end{equation}
+% \begin{equation} \label{eq:rss}
+% 	RSS = e_1^2 + e_2^2 + ... + e_n^2
+% \end{equation}
 
-Em que $e_1^2$, $e_2^2$, ..., $e_n^2$ correspondem à diferença entre o valor previsto pelo modelo e o valor real para as $n$ amostras. Dada a função a ser minimizada, as expressões de $\beta_0$ e $\beta_1$ são dadas por:
+% Em que $e_1^2$, $e_2^2$, ..., $e_n^2$ correspondem à diferença entre o valor previsto pelo modelo e o valor real para as $n$ amostras. Dada a função a ser minimizada, as expressões de $\beta_0$ e $\beta_1$ são dadas por:
 
-\begin{equation} \label{eq:rl2}
-	\beta_1 = \frac{\sum_{i=1}^n (x_i - \overline{x})(y_i - \overline{y})}{\sum_{i=1}^n(x_i - \overline{x})^2}
-\end{equation}
+% \begin{equation} \label{eq:rl2}
+% 	\beta_1 = \frac{\sum_{i=1}^n (x_i - \overline{x})(y_i - \overline{y})}{\sum_{i=1}^n(x_i - \overline{x})^2}
+% \end{equation}
 
-\begin{equation} \label{eq:rl3}
-	\beta_0 = \overline{y} - \beta_1\overline{x}
-\end{equation}
+% \begin{equation} \label{eq:rl3}
+% 	\beta_0 = \overline{y} - \beta_1\overline{x}
+% \end{equation}
 
-Em que $x$ corresponde ao valor da variável de entrada, $\overline{x}$ é a média dos valores de $x$, $y$ é o valor da variável de saída e $\overline{y}$ é a média dos valores de $y$.
+% Em que $x$ corresponde ao valor da variável de entrada, $\overline{x}$ é a média dos valores de $x$, $y$ é o valor da variável de saída e $\overline{y}$ é a média dos valores de $y$.
 
-\subsection{\textcolor{red}{\textit{Random Forest} (Colocar na fundamentação?)}}
+% \subsection{\textcolor{red}{\textit{Random Forest} (Colocar na fundamentação?)}}
 
-A \textit{Random Forest} consiste em uma técnica \textit{ensemble} não linear, em que uma variável qualitativa ou quantitativa é determinada através de uma combinação de modelos de árvores de decisão (FRIEDMAN; HASTIE; TIBSHIRANI, 2001). A relação entre as variáveis de entrada e a de saída é modelada através de um conjunto de regras de decisão, construídas por divisões binárias e recursivas dos dados de treinamento. Cada regra de decisão utiliza uma única variável de entrada para a divisão dos dados, sendo ela selecionada a partir de um subconjunto aleatório de todas as variáveis. Um modelo de regressão é então construído a partir das variáveis selecionadas e o erro RSS é calculado (HUTENGS; VOHLAND, 2016). As regras de decisão e consequentemente as variáveis de entrada, são selecionadas visando a minimização desse erro. Assim, a \textit{Random Forest} permite a determinação das variáveis mais significativas para a predição da variável de saída. 
+% A \textit{Random Forest} consiste em uma técnica \textit{ensemble} não linear, em que uma variável qualitativa ou quantitativa é determinada através de uma combinação de modelos de árvores de decisão (FRIEDMAN; HASTIE; TIBSHIRANI, 2001). A relação entre as variáveis de entrada e a de saída é modelada através de um conjunto de regras de decisão, construídas por divisões binárias e recursivas dos dados de treinamento. Cada regra de decisão utiliza uma única variável de entrada para a divisão dos dados, sendo ela selecionada a partir de um subconjunto aleatório de todas as variáveis. Um modelo de regressão é então construído a partir das variáveis selecionadas e o erro RSS é calculado (HUTENGS; VOHLAND, 2016). As regras de decisão e consequentemente as variáveis de entrada, são selecionadas visando a minimização desse erro. Assim, a \textit{Random Forest} permite a determinação das variáveis mais significativas para a predição da variável de saída. 
 
-O valor previsto resultante será a média dos resultados obtidos para cada árvore de decisão. Para evitar a correlação entre as árvores, elas são construídas a partir de subconjuntos não disjuntos dos dados de entrada, o que torna o modelo resultante mais estável, robusto e preciso (BREIMAN, 2001). 
+% O valor previsto resultante será a média dos resultados obtidos para cada árvore de decisão. Para evitar a correlação entre as árvores, elas são construídas a partir de subconjuntos não disjuntos dos dados de entrada, o que torna o modelo resultante mais estável, robusto e preciso (BREIMAN, 2001). 
 
-\section{Avaliação de desempenho dos modelos}
+% \section{Avaliação de desempenho dos modelos}
 
-Para a avaliação da capacidade preditiva dos modelos, será utilizada a estratégia de validação cruzada k-\textit{fold} (k-\textit{fold cross validation}). Ela é empregada para assegurar que não há um sobreajuste (\textit{overfitting}) no modelo, através da divisão do conjunto de dados em k subconjuntos disjuntos, com uma alocação das amostras para o conjunto de treinamento ou teste (DA SILVA; PERES; BOSCARIOLI, 2017). Assim, um dos subconjuntos será utilizado como teste e os k-1 demais para o treinamento, de forma que o modelo realize a predição para dados desconhecidos. Este procedimento é repetido k vezes, alterando os subconjuntos a cada vez.
+% Para a avaliação da capacidade preditiva dos modelos, será utilizada a estratégia de validação cruzada k-\textit{fold} (k-\textit{fold cross validation}). Ela é empregada para assegurar que não há um sobreajuste (\textit{overfitting}) no modelo, através da divisão do conjunto de dados em k subconjuntos disjuntos, com uma alocação das amostras para o conjunto de treinamento ou teste (DA SILVA; PERES; BOSCARIOLI, 2017). Assim, um dos subconjuntos será utilizado como teste e os k-1 demais para o treinamento, de forma que o modelo realize a predição para dados desconhecidos. Este procedimento é repetido k vezes, alterando os subconjuntos a cada vez.
 
-As predições resultantes serão avaliadas através de um teste de hipóteses e das métricas de correlação e RMSE, empregadas nos artigos em que a regressão foi realizada. Estes indicadores medem, respectivamente, o grau de dependência entre as variáveis de entrada e saída e a magnitude média dos erros estimados (ALVES; VECCHIA, 2011), conforme as equações abaixo:
+% As predições resultantes serão avaliadas através de um teste de hipóteses e das métricas de correlação e RMSE, empregadas nos artigos em que a regressão foi realizada. Estes indicadores medem, respectivamente, o grau de dependência entre as variáveis de entrada e saída e a magnitude média dos erros estimados (ALVES; VECCHIA, 2011), conforme as equações abaixo:
 
-\begin{equation} \label{eq:r}
-	R = \frac{\sum_{i=1}^n (x_i - \overline{x})(y_i - \overline{y})}{\sqrt{\sum_{i=1}^n(x_i - \overline{x})^2} \sqrt{\sum_{i=1}^n (y_i - \overline{y})^2}}
-\end{equation}
+% \begin{equation} \label{eq:r}
+% 	R = \frac{\sum_{i=1}^n (x_i - \overline{x})(y_i - \overline{y})}{\sqrt{\sum_{i=1}^n(x_i - \overline{x})^2} \sqrt{\sum_{i=1}^n (y_i - \overline{y})^2}}
+% \end{equation}
 
-\begin{equation} \label{eq:rmse}
-	RMSE = \sqrt{\frac{1}{n} \sum_{i=1}^n (y_i - \hat{y}_i)^2}
-\end{equation}
+% \begin{equation} \label{eq:rmse}
+% 	RMSE = \sqrt{\frac{1}{n} \sum_{i=1}^n (y_i - \hat{y}_i)^2}
+% \end{equation}
 
-Em que $x_i$ é o valor da variável de entrada, $\overline{x}$ é a média dos valores de $x$, $y_i$ é o valor real da variável de saída, $\overline{y}$ é a média dos valores de $y$, $n$ é o número de amostras e $\hat{y}_i$ é o valor previsto para a variável de saída.
+% Em que $x_i$ é o valor da variável de entrada, $\overline{x}$ é a média dos valores de $x$, $y_i$ é o valor real da variável de saída, $\overline{y}$ é a média dos valores de $y$, $n$ é o número de amostras e $\hat{y}_i$ é o valor previsto para a variável de saída.
 
 % \subsection{Subseção de exemplo 1 - Referenciando seções} \label{subsec:subsec1}
 
